# Agentic-AI

./: README.md  pyproject.toml  requirements.txt  test.py
1-BasicChatBot/: 1-basicchatbot.ipynb
2-HumanAssistance/: humanintheloop.ipynb
