[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.15",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "python-dotenv>=1.2.1",
]
